<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddVehicleFragment">

    <TextView
        android:id="@+id/vehicle_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/vehicle"
        android:textAppearance="@style/vehicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plate_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/plate_info_plate_txt"
        android:textAppearance="@style/registration"
        app:layout_constraintStart_toStartOf="@+id/vehicle_txt"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_txt" />

    <TextView
        android:id="@+id/description_txt"
        android:layout_width="315dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:text="@string/plate_info_hint"
        android:textAppearance="@style/ingrese_la_"
        app:layout_constraintStart_toStartOf="@+id/plate_txt"
        app:layout_constraintTop_toBottomOf="@+id/plate_txt" />

    <EditText
        android:id="@+id/plate_info_plate_et"
        style="@style/PrimaryEditTextStyle"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
        android:ems="8"
        android:hint="@string/plate_info_plate_txt"
        android:inputType="textCapCharacters|textFilter"
        android:maxEms="1"
        android:maxLength="10"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/description_txt"
        app:layout_constraintTop_toBottomOf="@+id/description_txt" />

    <TextView
        android:id="@+id/plate_info_plate_warning_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextNotOptionalStyle"
        android:text="@string/Obligatory_field"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/plate_info_plate_et"
        app:layout_constraintTop_toBottomOf="@+id/plate_info_plate_et" />

    <EditText
        android:id="@+id/plate_info_tag_et"
        style="@style/PrimaryEditTextStyle"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/plate_info_tag_txt"
        android:inputType="textPersonName"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="@+id/plate_info_plate_et"
        app:layout_constraintStart_toStartOf="@+id/plate_info_plate_et"
        app:layout_constraintTop_toBottomOf="@+id/plate_info_plate_et" />

    <EditText
        android:id="@+id/plate_info_plate_id_et"
        style="@style/PrimaryEditTextStyle"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/plate_info_plate_id_txt"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="@+id/plate_info_tag_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plate_info_tag_et"
        app:layout_constraintTop_toBottomOf="@+id/plate_info_tag_et" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/plate_info_plate_id_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plate_info_plate_id_et"
        app:layout_constraintTop_toBottomOf="@+id/plate_info_plate_id_et">

        <Spinner
            android:id="@+id/vehicle_type_spinner"
            style="@style/PrimarySpinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/margin_normal"
            android:src="@drawable/vector_down_arrow"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <Switch
        android:id="@+id/default_settings_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/default_settings"
        android:textColor="@color/t2p_dark_grey_color"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/next_btn"
        style="@style/SecondaryButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_btn"
        style="@style/TertiaryButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="16dp"
        android:text="@string/back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>