<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EditDeleteVehicleFragment">


    <TextView
        android:id="@+id/vehicle_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/vehicle"
        android:textAppearance="@style/vehicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/plate_const"
        android:layout_width="102dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edgeplate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vehicle_txt"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/vehicle_txt"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_txt"
        app:layout_constraintVertical_bias="0.069">

        <!-- URUGUAY -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/country_const"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/country_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bordercountry"
                android:gravity="center_horizontal|top"
                android:text="@string/uruguay"
                android:textAppearance="@style/uruguay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/plate_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal|top"
            android:text="@string/lfa2022"
            android:textAppearance="@style/lfa2022"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_const" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/hashtag_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="140dp"
        android:gravity="top"
        android:text="@string/label"
        android:textAppearance="@style/chevrolet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toEndOf="@+id/plate_const"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/plate_info_plate_et"
        style="@style/PrimaryEditTextStyle"
        android:layout_width="0dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="32dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
        android:ems="8"
        android:hint="@string/plate_info_plate_txt"
        android:inputType="textCapCharacters|textFilter"
        android:maxEms="1"
        android:maxLength="10"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plate_const"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plate_info_plate_warning_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextNotOptionalStyle"
        android:text="@string/Obligatory_field"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/plate_info_plate_et"
        app:layout_constraintTop_toBottomOf="@+id/plate_info_plate_et" />

    <EditText
        android:id="@+id/plate_info_tag_et"
        style="@style/PrimaryEditTextStyle"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/plate_info_tag_txt"
        android:inputType="textPersonName"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="@+id/plate_info_plate_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plate_const"
        app:layout_constraintTop_toBottomOf="@+id/plate_info_plate_et" />

    <EditText
        android:id="@+id/plate_info_plate_id_et"
        style="@style/PrimaryEditTextStyle"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/plate_info_plate_id_txt"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="@+id/plate_info_tag_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plate_const"
        app:layout_constraintTop_toBottomOf="@+id/plate_info_tag_et" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/plate_info_plate_id_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plate_info_plate_id_et"
        app:layout_constraintTop_toBottomOf="@+id/plate_info_plate_id_et">

        <Spinner
            android:id="@+id/vehicle_type_spinner"
            style="@style/PrimarySpinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/margin_normal"
            android:src="@drawable/vector_down_arrow"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <Switch
        android:id="@+id/default_settings_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/default_settings"
        android:textColor="@color/t2p_dark_grey_color"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/delete_const"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/default_settings_switch"
        app:layout_constraintVertical_bias="0.069">

        <ImageView
            android:id="@+id/delete_img"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515" />

        <TextView
            android:id="@+id/delete_txt"
            android:layout_width="156dp"
            android:layout_height="23dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="44dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="0sp"
            android:text="@string/delete_vehicle"
            android:textAppearance="@style/remove_plaque"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/save_btn"
        style="@style/SecondaryButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/back_btn"
        style="@style/TertiaryButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="16dp"
        android:text="@string/back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- Eliminar método de pago -->
</androidx.constraintlayout.widget.ConstraintLayout>