<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ZoneActivity">

    <TextView
        android:id="@+id/zonas"
        android:layout_width="109dp"
        android:layout_height="37dp"
        android:layout_marginTop="68dp"
        android:text="@string/zonas"
        android:textAppearance="@style/zonas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/en_las_sigu"
        android:layout_width="315dp"
        android:layout_height="77dp"
        android:layout_marginTop="120dp"
        android:gravity="top"
        android:text="@string/en_las_sigu"
        android:textAppearance="@style/en_las_sigu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/zonas"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/zone_recycler"
        android:layout_width="352dp"
        android:layout_height="419dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/en_las_sigu"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@+id/en_las_sigu"
        app:layout_constraintTop_toBottomOf="@+id/en_las_sigu" />

    <Button
        android:id="@+id/back_btn"
        style="@style/TertiaryButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="16dp"
        android:text="@string/back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>